@@ -1,3 +1,8 @@
+Thu Aug  4 15:44:10 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* tool/rbinstall.rb (Gem::Specification): may not be defined when
+	  cross-compiling and BASERUBY is 1.8.
+
 Thu Aug  4 11:30:36 2011  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* include/ruby/missing.h: define __syscall on OpenBSD as r32702.
